--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Card from '../components/Card.astro';
 
 <Layout title="Welcome to Astro.">
 	<main>
-		<h1>Welcome to<br><span class="text-gradient">Astro Openblocks Keystone</span><br> Demo</h1>
+		<h1>Welcome to<br><span class="text-gradient">Astro Openblocks</span><br> Demo</h1>
 		<ul role="list" class="link-card-grid">
 			<Card
 				href="/openblocks"
